--- a/src/components/atoms/Button/button.css
+++ b/src/components/atoms/Button/button.css
@@ -12,6 +12,10 @@
   background-color: #1ea7fd;
 }
 
+.storybook-button--primary:hover {
+  background-color: #48a8e4;
+}
+
 .storybook-button--secondary {
   color: #333;
   background-color: transparent;
