feat: Create atom plop generator

--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #0B3277;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
